// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover should pass additional props to portaled element 1`] = `
<span>
  <div
    class="components-popover components-animate__appear is-from-top is-from-left is-without-arrow"
    data-x-axis="right"
    data-y-axis="bottom"
    role="tooltip"
    style="top: 0px; left: 0px;"
    tabindex="-1"
  >
    <div
      class="components-popover__content"
    >
      <div
        style="position: relative;"
      >
        <div
          aria-hidden="true"
          style="position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; pointer-events: none; opacity: 0; overflow: hidden; z-index: -1;"
        />
        Hello
      </div>
    </div>
  </div>
</span>
`;

exports[`Popover should render content 1`] = `
<span>
  <div
    class="components-popover components-animate__appear is-from-top is-from-left is-without-arrow"
    data-x-axis="right"
    data-y-axis="bottom"
    style="top: 0px; left: 0px;"
    tabindex="-1"
  >
    <div
      class="components-popover__content"
    >
      <div
        style="position: relative;"
      >
        <div
          aria-hidden="true"
          style="position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; pointer-events: none; opacity: 0; overflow: hidden; z-index: -1;"
        />
        Hello
      </div>
    </div>
  </div>
</span>
`;
